--- a/pms-common-proto/pom.xml
+++ b/pms-common-proto/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.pms</groupId>
         <artifactId>pms-common</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.2</version>
     </parent>
 
     <artifactId>pms-common-proto</artifactId>
@@ -52,7 +52,7 @@
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>compile-custom</goal>
+                            <goal>test-compile</goal>
                         </goals>
                     </execution>
                 </executions>
